<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--LoginVC-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginVC" customModule="CI_CD" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="LRD-cz-aEX">
                                <rect key="frame" x="20" y="144" width="374" height="250"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eqw-4u-hMS">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="76.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="qOh-ax-qwi"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vju-DE-BLy">
                                        <rect key="frame" x="0.0" y="86.5" width="374" height="77"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="umG-w8-8LT"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uv8-vu-Oi4">
                                        <rect key="frame" x="0.0" y="173.5" width="374" height="76.5"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="validateLogin" destination="BYZ-38-t0r" eventType="touchUpInside" id="jbJ-2E-0rh"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="250" id="wPv-X0-dN2"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="LRD-cz-aEX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2b5-Zo-reM"/>
                            <constraint firstItem="LRD-cz-aEX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hgs-DR-EHx"/>
                            <constraint firstItem="LRD-cz-aEX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="JNR-s2-jVe"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LRD-cz-aEX" secondAttribute="trailing" constant="20" id="Zlc-Ij-hDT"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="txtPassword" destination="Vju-DE-BLy" id="qkS-jt-wvM"/>
                        <outlet property="txtUsername" destination="Eqw-4u-hMS" id="IPB-EG-czH"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="139" y="101"/>
        </scene>
    </scenes>
</document>
